--- a/gallery.html
+++ b/gallery.html
@@ -73,37 +73,41 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
           </ol>
           <div class="carousel-inner gallery">
             <div class="carousel-item active">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="First slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/Tile-grouting-ideas-2-920x920.jpg" alt="First slide">
             </div>            
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/10.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/10.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/22.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/22.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/2.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/2.jpg" alt="Fourth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image1.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/image1.jpg" alt="Fifth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/14.jpg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/14.jpg" alt="Sixth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/16.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/16.jpg" alt="Seventh slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Fourth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/Tile-grouting-ideas-5-920x920.jpg" alt="Eighth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/18.jpg" alt="Fifth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/18.jpg" alt="Nineth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image0_1.jpg" alt="Sixth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kitchen-img/image0_1.jpg" alt="Tenth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -251,34 +255,37 @@
             <li data-target="#carouselExampleIndicators2" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators2" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators2" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators2" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators2" data-slide-to="7"></li>
+            <li data-target="#carouselExampleIndicators2" data-slide-to="8"></li>
           </ol>
           <div class="carousel-inner gallery">
             <div class="carousel-item active">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Ash-White-Living-Room-Wall.jpg" alt="First slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/Ash-White-Living-Room-Wall.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/8.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/8.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/19.jpg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/19.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/new3.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/new3.jpg" alt="Fourth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/15.jpg" alt="Fourth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/15.jpg" alt="Fifth slide">
             </div>            
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image3.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/image3.jpg" alt="Sixth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/new5.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/new5.jpg" alt="Seventh slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/1.jpg" alt="Fifth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/1.jpg" alt="Eighth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/11.jpg" alt="Sixth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/living-img/11.jpg" alt="Nineth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
@@ -424,34 +431,38 @@
             <li data-target="#carouselExampleIndicators4" data-slide-to="2"></li>
             <li data-target="#carouselExampleIndicators4" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators4" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators4" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators4" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators4" data-slide-to="7"></li>
+            <li data-target="#carouselExampleIndicators4" data-slide-to="8"></li>
           </ol>
           <div class="carousel-inner gallery">
             <div class="carousel-item active">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-Topps-Tiles-Aqua-Grout-920x920.jpg" alt="First slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/Tile-grouting-ideas-Topps-Tiles-Aqua-Grout-920x920.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/new1.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/new1.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/3.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/3.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/25.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/25.jpg" alt="Fourth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/4.jpg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/4.jpg" alt="Fifth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/23.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/23.jpg" alt="Sixth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/new7.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/new7.jpg" alt="Seventh slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/5.jpg" alt="Fourth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/5.jpg" alt="Eighth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/7.jpg" alt="Fifth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bath-img/7.jpg" alt="Nineth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators4" role="button" data-slide="prev">
